Fix blog post spacing and add readable date
- Converted date to readable date
- Fixed spacing of blog posts

--- a/src/main/assets/main.css
+++ b/src/main/assets/main.css
@@ -7,6 +7,10 @@
 	padding: 2em;
 }
 
+.spacing-half {
+	padding: 10px;
+}
+
 .typist {
 	font-size: 2em;
 }
